-change from connect id to PersonalId

--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -350,20 +350,20 @@ License.
     <string name="fcm_notification">Notification de la FCM</string>
     <string name="fcm_default_notification_channel">canal de notification-notifications-push</string>
     <string name="app_select_message">Sélectionnez une application:</string>
-    <string name="connect_id_enabled">ConnectID activé</string>
-    <string name="login_password_by_connect">Via ConnectID (ou appuyez ici)</string>
+    <string name="connect_id_enabled">PersonalId activé</string>
+    <string name="login_password_by_connect">Via PersonalId (ou appuyez ici)</string>
     <string name="login_welcome_connect_signed_in">Bienvenue %s !</string>
-    <string name="login_connect_secondary_phone_message">Veuillez confirmer votre téléphone secondaire par %s pour continuer à utiliser ConnectID.</string>
+    <string name="login_connect_secondary_phone_message">Veuillez confirmer votre téléphone secondaire par %s pour continuer à utiliser PersonalId.</string>
     <string name="login_input_auto">AUTO</string>
     <string name="choice_or">_____________    OU    _____________</string>
     <string name="busy_message">Nous sommes encore en train de traiter votre demande précédente. Veuillez réessayer plus tard.</string>
     <string name="connect_button_logged_in">Accéder au menu Connecter</string>
     <string name="personalid_generic_error">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
-    <string name="connect_registration_title">Inscription ConnectID</string>
+    <string name="connect_registration_title">Inscription PersonalId</string>
     <string name="connect_signup">S\'inscrire</string>
     <string name="connect_recover">Récupérer</string>
-    <string name="connect_registration_have_account">Vous avez déjà\nConnectID?</string>
-    <string name="connect_recover_no_account">Vous n\'avez pas de ConnectID?</string>
+    <string name="connect_registration_have_account">Vous avez déjà\nPersonalId?</string>
+    <string name="connect_recover_no_account">Vous n\'avez pas de PersonalId?</string>
     <string name="connect_consent_message_1">J\'ai lu et j\'accepte la politique de confidentialité, les conditions de service, l\'accord commercial et la politique d\'utilisation acceptable de Dimagi.</string>
     <string name="connect_phone_page_title">Numéro de téléphone</string>
     <string name="connect_phone_title_primary">Téléphone principal</string>
@@ -407,16 +407,16 @@ License.
     <string name="connect_backup_code_recovery_message">Vous avez entré le mauvais code trop de fois, vous devrez récupérer votre compte.\n Sur l\'écran suivant, nous enverrons un code par SMS au numéro de téléphone alternatif associé à votre compte.</string>
     <string name="connect_backup_code_confirm_message">Vous avez entré le mauvais code trop de fois, vous devrez configurer à nouveau le code.\n Sur l\'écran suivant, nous vous redirigerons vers la page de configuration du code.</string>
     <string name="connect_backup_code_verify_forgot">Vous n\'avez pas ou avez oublié votre code ?</string>
-    <string name="connect_recovery_title">Récupération ConnectID</string>
+    <string name="connect_recovery_title">Récupération PersonalId</string>
     <string name="connect_recovery_alt_title">Téléphone alternatif</string>
     <string name="connect_recovery_alt_message">Sur l\'écran suivant, nous enverrons un code par SMS au numéro de téléphone alternatif associé à votre compte.</string>
     <string name="connect_recovery_alt_button">Continuer</string>
     <string name="connect_recovery_alt_change_button">Changer de numéro</string>
     <string name="connect_recovery_success_title">Compte récupéré</string>
-    <string name="connect_recovery_success_message">Vous avez récupéré votre compte avec succès et pouvez désormais reprendre l\'utilisation de votre ConnectID.</string>
+    <string name="connect_recovery_success_message">Vous avez récupéré votre compte avec succès et pouvez désormais reprendre l\'utilisation de votre PersonalId.</string>
     <string name="connect_recovery_success_button">D\'ACCORD</string>
     <string name="connect_recovery_failure">Erreur lors de la finalisation de la récupération, veuillez réessayer plus tard</string>
-    <string name="connect_unlock_title">Déverrouiller ConnectID</string>
+    <string name="connect_unlock_title">Déverrouiller PersonalId</string>
     <string name="connect_unlock_message">Veuillez déverrouiller pour continuer</string>
     <string name="connect_unlock_button_pin">Déverrouiller avec code PIN</string>
     <string name="connect_unlock_button_password">Déverrouiller avec un mot de passe</string>
@@ -429,15 +429,15 @@ License.
     <string name="connect_biometric_enroll_fail_button">Accédez aux paramètres</string>
     <string name="connect_register_name">Nom</string>
     <string name="connect_register_success_title">Compte créé</string>
-    <string name="connect_register_success_message">Votre compte ConnectID a été créé avec succès et est maintenant prêt à être utilisé!</string>
+    <string name="connect_register_success_message">Votre compte PersonalId a été créé avec succès et est maintenant prêt à être utilisé!</string>
     <string name="connect_register_success_button">D\'ACCORD</string>
     <string name="connect_verify_title">Options de déverrouillage</string>
-    <string name="connect_verify_message">Veuillez configurer une méthode ci-dessous pour déverrouiller à la fois votre appareil et votre compte ConnectID</string>
+    <string name="connect_verify_message">Veuillez configurer une méthode ci-dessous pour déverrouiller à la fois votre appareil et votre compte PersonalId</string>
     <string name="connect_verify_use_fingerprint_long">Utiliser l\'empreinte digitale pour se connecter</string>
-    <string name="connect_verify_fingerprint_configured">Votre empreinte digitale a déjà été configurée et sera utilisée pour déverrouiller ConnectID.</string>
+    <string name="connect_verify_fingerprint_configured">Votre empreinte digitale a déjà été configurée et sera utilisée pour déverrouiller PersonalId.</string>
     <string name="connect_verify_configure_fingerprint">Configurer l\'empreinte digitale</string>
     <string name="connect_verify_use_pin_long">Utiliser le code PIN pour se connecter</string>
-    <string name="connect_verify_pin_configured">Votre code PIN a déjà été configuré et sera utilisé pour déverrouiller ConnectID.</string>
+    <string name="connect_verify_pin_configured">Votre code PIN a déjà été configuré et sera utilisé pour déverrouiller PersonalId.</string>
     <string name="connect_verify_configure_pin">Configurer le code PIN</string>
     <string name="connect_verify_agree">Accepter et continuer</string>
     <string name="connect_verify_phone_title">Le code de vérification</string>
@@ -510,15 +510,15 @@ License.
     <string name="connect_payment_confirm_yes">Oui!</string>
     <string name="connect_payment_confirm_no">Demander plus tard</string>
     <string name="connect_payment_confirm_failed">Échec de l\'envoi de la confirmation, nous vous redemanderons plus tard.</string>
-    <string name="login_button_connectid">Connectez-vous avec ConnectID</string>
-    <string name="login_link_connectid_title">Lien vers ConnectID ?</string>
-    <string name="login_link_connectid_message">Souhaitez-vous associer cet identifiant à votre compte ConnectID? Vous n\'aurez plus besoin de saisir votre mot de passe à l\'avenir.</string>
-    <string name="login_unlink_connectid_title">Dissocier ConnectID?</string>
-    <string name="login_unlink_connectid_message">Je vois que vous vous êtes connecté avec votre mot de passe, bien que ConnectID ait été configuré pour la connexion automatique. Souhaitez-vous dissocier cette connexion de ConnectID?</string>
+    <string name="login_button_connectid">Connectez-vous avec PersonalId</string>
+    <string name="login_link_connectid_title">Lien vers PersonalId ?</string>
+    <string name="login_link_connectid_message">Souhaitez-vous associer cet identifiant à votre compte PersonalId? Vous n\'aurez plus besoin de saisir votre mot de passe à l\'avenir.</string>
+    <string name="login_unlink_connectid_title">Dissocier PersonalId?</string>
+    <string name="login_unlink_connectid_message">Je vois que vous vous êtes connecté avec votre mot de passe, bien que PersonalId ait été configuré pour la connexion automatique. Souhaitez-vous dissocier cette connexion de PersonalId?</string>
     <string name="login_link_connectid_yes">Oui</string>
     <string name="login_link_connectid_no">Non</string>
-    <string name="login_menu_connect_sign_in">Inscrivez-vous à ConnectID</string>
-    <string name="login_menu_connect_forget">Oublier l\'utilisateur ConnectID</string>
+    <string name="login_menu_connect_sign_in">Inscrivez-vous à PersonalId</string>
+    <string name="login_menu_connect_forget">Oublier l\'utilisateur PersonalId</string>
     <string name="connect_app_install_unknown_error">L\'installation de l\'application a échoué en raison d\'une erreur inconnue</string>
     <string name="connect_app_installed">Application installée</string>
     <string name="app_with_id_not_found">L\'application CommCare requise n\'est pas installée sur l\'appareil</string>
@@ -573,7 +573,7 @@ License.
     <string name="connect_job_tile_daily_limit">Dépassement de limite</string>
 
     <string name="connect_recovery_decision_new">Choisissez une étape ci-dessous</string>
-    <string name="connect_recovery_button_new">Créer un nouveau compte ConnectID</string>
+    <string name="connect_recovery_button_new">Créer un nouveau compte PersonalId</string>
     <string name="connect_recovery_button_recover">Récupérer un compte existant</string>
     <string name="connect_recovery_decision_phone">Veuillez saisir le numéro de téléphone principal que vous avez saisi avec votre compte</string>
     <string name="connect_recovery_button_phone">Continuer</string>
