--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -353,9 +353,9 @@
     <string name="fcm_default_notification_channel">notificações-canal-notificações push</string>
     <string name="app_select_message">Selecione um aplicativo:</string>
     <string name="connect_id_enabled">Connect ID Habilitado</string>
-    <string name="login_password_by_connect">Via ConnectID (ou pressione aqui)</string>
+    <string name="login_password_by_connect">Via PersonalId (ou pressione aqui)</string>
     <string name="login_welcome_connect_signed_in">Bemvindo %s!</string>
-    <string name="login_connect_secondary_phone_message">Por favor, confirme seu telefone secundário até %s para continuar usando o ConnectID.</string>
+    <string name="login_connect_secondary_phone_message">Por favor, confirme seu telefone secundário até %s para continuar usando o PersonalId.</string>
     <string name="choice_or">OU</string>
     <string name="busy_message">Ainda estamos ocupados processando sua solicitação anterior. Por favor, tente novamente em alguns momentos.</string>
     <string name="connect_button_logged_in">Vá para o Conectar menu</string>
@@ -363,8 +363,8 @@
     <string name="connect_registration_title">Inscrição no Connect ID</string>
     <string name="connect_signup">Inscrição</string>
     <string name="connect_recover">Recuperar</string>
-    <string name="connect_registration_have_account">Já tem\nConnectID? Não tem\numa conta?</string>
-    <string name="connect_recover_no_account">Não tem ConnectID?</string>
+    <string name="connect_registration_have_account">Já tem\nPersonalId? Não tem\numa conta?</string>
+    <string name="connect_recover_no_account">Não tem PersonalId?</string>
     <string name="connect_consent_message_1">Li e concordo com a Política de Privacidade, Termos de Serviço, Acordo Comercial e Política de Uso Aceitável da Dimagi</string>
     <string name="connect_phone_page_title">Número de telefone</string>
     <string name="connect_phone_title_primary">Telefone principal</string>
@@ -390,7 +390,7 @@
     <string name="connect_otp_verification_failed">A verificação do OTP falhou devido a</string>
     <string name="connect_backup_code_title_set">Código de recuperação</string>
     <string name="connect_backup_code_title_confirm">Confirmar código de recuperação</string>
-    <string name="connect_backup_code_message_title">Código de recuperação ConnectID</string>
+    <string name="connect_backup_code_message_title">Código de recuperação PersonalId</string>
     <string name="connect_backup_code_message">Digite seu código de recuperação de 6 dígitos</string>
     <string name="connect_backup_code">Digite o código de recuperação</string>
     <string name="connect_backup_code_repeat">Confirmar código de recuperação</string>
@@ -410,16 +410,16 @@
     <string name="connect_backup_code_recovery_message">Introduziu o PIN errado demasiadas vezes, terá de recuperar a sua conta.n No ecrã seguinte, enviaremos um código via SMS para o número de telefone alternativo associado à sua conta.</string>
     <string name="connect_backup_code_confirm_message">Você inseriu o PIN errado muitas vezes, você terá que configurar o pino novamente.n Na próxima tela, redirecionaremos você para a página de configuração do pin</string>
     <string name="connect_backup_code_verify_forgot">Esqueci o código</string>
-    <string name="connect_recovery_title">Configuração do ConnectID</string>
+    <string name="connect_recovery_title">Configuração do PersonalId</string>
     <string name="connect_recovery_alt_title">Telefone alternativo</string>
     <string name="connect_recovery_alt_message">Na próxima tela, nós \'ll enviar um código via SMS para o número de telefone alternativo associado com sua conta.</string>
     <string name="connect_recovery_alt_button">Continuar</string>
     <string name="connect_recovery_alt_change_button">Alterar número</string>
     <string name="connect_recovery_success_title">Conta Recuperada</string>
-    <string name="connect_recovery_success_message">Você recuperou sua conta com sucesso e agora pode continuar usando seu ConnectID.</string>
+    <string name="connect_recovery_success_message">Você recuperou sua conta com sucesso e agora pode continuar usando seu PersonalId.</string>
     <string name="connect_recovery_success_button">OK</string>
     <string name="connect_recovery_failure">Erro ao finalizar a recuperação, tente novamente mais tarde</string>
-    <string name="connect_unlock_title">Desbloquear ConnectID</string>
+    <string name="connect_unlock_title">Desbloquear PersonalId</string>
     <string name="connect_unlock_message">Por favor, desbloqueie para continuar</string>
     <string name="connect_unlock_button_pin">Desbloqueio com PIN</string>
     <string name="connect_unlock_button_password">Desbloqueie com senha</string>
@@ -433,15 +433,15 @@
     <string name="connect_biometric_enroll_fail_button">Vá para Configurações</string>
     <string name="connect_register_name">Nome</string>
     <string name="connect_register_success_title">Conta criada</string>
-    <string name="connect_register_success_message">Sua conta ConnectID foi criada com sucesso e agora está pronta para você usar!</string>
+    <string name="connect_register_success_message">Sua conta PersonalId foi criada com sucesso e agora está pronta para você usar!</string>
     <string name="connect_register_success_button">OK</string>
     <string name="connect_verify_title">Opções de desbloqueio</string>
-    <string name="connect_verify_message">Configure um método abaixo para desbloquear o seu dispositivo e a conta ConnectID</string>
+    <string name="connect_verify_message">Configure um método abaixo para desbloquear o seu dispositivo e a conta PersonalId</string>
     <string name="connect_verify_use_fingerprint_long">Usar impressão digital para se conectar</string>
-    <string name="connect_verify_fingerprint_configured">Sua impressão digital já foi configurada e será usada para desbloquear o ConnectID.</string>
+    <string name="connect_verify_fingerprint_configured">Sua impressão digital já foi configurada e será usada para desbloquear o PersonalId.</string>
     <string name="connect_verify_configure_fingerprint">Configurar impressão digital</string>
     <string name="connect_verify_use_pin_long">Utilizar o PIN para ligar</string>
-    <string name="connect_verify_pin_configured">O seu PIN já foi configurado e será utilizado para desbloquear o ConnectID.</string>
+    <string name="connect_verify_pin_configured">O seu PIN já foi configurado e será utilizado para desbloquear o PersonalId.</string>
     <string name="connect_verify_configuration_failed">A configuração falhou, tente novamente. %s</string>
     <string name="connect_verify_configure_pin">Configurar PIN</string>
     <string name="connect_verify_agree">Concordo &amp; Continuar</string>
@@ -527,15 +527,15 @@
     <string name="connect_payment_confirm_yes">Sim!</string>
     <string name="connect_payment_confirm_no">Pergunte mais tarde</string>
     <string name="connect_payment_confirm_failed">Falha ao enviar a confirmação, pediremos novamente mais tarde.</string>
-    <string name="login_button_connectid">Iniciar sessão com o ConnectID</string>
-    <string name="login_link_connectid_title">Link para ConnectID?</string>
-    <string name="login_link_connectid_message">Deseja vincular este login à sua conta ConnectID? Você não precisará digitar sua senha no futuro.</string>
-    <string name="login_unlink_connectid_title">Desvincular o ConnectID?</string>
-    <string name="login_unlink_connectid_message">Vejo que você fez login com sua senha, embora o ConnectID tenha sido configurado para login automático. Gostaria de cortar este login do ConnectID?</string>
+    <string name="login_button_connectid">Iniciar sessão com o PersonalId</string>
+    <string name="login_link_connectid_title">Link para PersonalId?</string>
+    <string name="login_link_connectid_message">Deseja vincular este login à sua conta PersonalId? Você não precisará digitar sua senha no futuro.</string>
+    <string name="login_unlink_connectid_title">Desvincular o PersonalId?</string>
+    <string name="login_unlink_connectid_message">Vejo que você fez login com sua senha, embora o PersonalId tenha sido configurado para login automático. Gostaria de cortar este login do PersonalId?</string>
     <string name="login_link_connectid_yes">Sim</string>
     <string name="login_link_connectid_no">Não</string>
-    <string name="login_menu_connect_sign_in">Inscreva-se no ConnectID</string>
-    <string name="login_menu_connect_forget">Esqueça o usuário do ConnectID</string>
+    <string name="login_menu_connect_sign_in">Inscreva-se no PersonalId</string>
+    <string name="login_menu_connect_forget">Esqueça o usuário do PersonalId</string>
     <string name="connect_app_install_unknown_error">Falha na instalação do aplicativo devido a um erro desconhecido</string>
     <string name="connect_app_installed">Aplicação instalada</string>
     <string name="app_with_id_not_found">O aplicativo CommCare necessário não está instalado no dispositivo</string>
