--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -351,19 +351,19 @@
     <string name="fcm_notification">Taarifa ya FCM</string>
     <string name="fcm_default_notification_channel">arifa-chaneli-kusukuma-arifa</string>
     <string name="app_select_message">Chagua programu:</string>
-    <string name="connect_id_enabled">ConnectID Imewashwa</string>
-    <string name="login_password_by_connect">Kupitia ConnectID (au bonyeza hapa)</string>
+    <string name="connect_id_enabled">PersonalId Imewashwa</string>
+    <string name="login_password_by_connect">Kupitia PersonalId (au bonyeza hapa)</string>
     <string name="login_welcome_connect_signed_in">Karibu %s!</string>
-    <string name="login_connect_secondary_phone_message">Tafadhali thibitisha simu yako ya pili kwa %s ili kuendelea kutumia ConnectID.</string>
+    <string name="login_connect_secondary_phone_message">Tafadhali thibitisha simu yako ya pili kwa %s ili kuendelea kutumia PersonalId.</string>
     <string name="choice_or">____________ AU _____________</string>
     <string name="busy_message">Bado tunashughulika kuchakata ombi lako la awali. Tafadhali jaribu tena baada ya muda fulani.</string>
     <string name="connect_button_logged_in">Nenda kwenye menyu ya Unganisha</string>
     <string name="personalid_generic_error">Tatizo limetokea, tafadhali sanidi akaunti yako ya Kitambulisho cha Kibinafsi tena.</string>
-    <string name="connect_registration_title">Usajili wa ConnectID</string>
+    <string name="connect_registration_title">Usajili wa PersonalId</string>
     <string name="connect_signup">Jisajili</string>
     <string name="connect_recover">Pata nafuu</string>
-    <string name="connect_registration_have_account">Je, tayari una\nConnectID?</string>
-    <string name="connect_recover_no_account">Je, huna\nConnectID?</string>
+    <string name="connect_registration_have_account">Je, tayari una\nPersonalId?</string>
+    <string name="connect_recover_no_account">Je, huna\nPersonalId?</string>
     <string name="connect_consent_message_1">Nimesoma na kukubaliana na Sera ya Faragha ya Dimagi, Sheria na Masharti, Makubaliano ya Biashara na Sera ya Matumizi Yanayokubalika.</string>
     <string name="connect_phone_page_title">Nambari ya Simu</string>
     <string name="connect_phone_title_primary">Simu ya Msingi</string>
@@ -407,16 +407,16 @@
     <string name="connect_backup_code_recovery_message">Umeweka Nambari isiyo sahihi mara nyingi sana, utahitaji kurejesha akaunti yako.\n Kwenye skrini inayofuata, tutatuma nambari ya kuthibitisha kupitia SMS kwa nambari mbadala ya simu inayohusishwa na akaunti yako.</string>
     <string name="connect_backup_code_confirm_message">Umeweka Msimbo usio sahihi mara nyingi sana, itabidi usanidi msimbo tena.\n Kwenye skrini inayofuata, tutakuelekeza kwenye ukurasa wa msimbo wa kusanidi.</string>
     <string name="connect_backup_code_verify_forgot">Je, huna au umesahau Nambari yako?</string>
-    <string name="connect_recovery_title">Urejeshaji wa ConnectID</string>
+    <string name="connect_recovery_title">Urejeshaji wa PersonalId</string>
     <string name="connect_recovery_alt_title">Simu Mbadala</string>
     <string name="connect_recovery_alt_message">Kwenye skrini inayofuata, tutatuma nambari ya kuthibitisha kupitia SMS kwa nambari mbadala ya simu inayohusishwa na akaunti yako.</string>
     <string name="connect_recovery_alt_button">Endelea</string>
     <string name="connect_recovery_alt_change_button">Badilisha nambari</string>
     <string name="connect_recovery_success_title">Akaunti Imerejeshwa</string>
-    <string name="connect_recovery_success_message">Umefanikiwa kurejesha akaunti yako na sasa unaweza kuendelea kutumia ConnectID yako.</string>
+    <string name="connect_recovery_success_message">Umefanikiwa kurejesha akaunti yako na sasa unaweza kuendelea kutumia PersonalId yako.</string>
     <string name="connect_recovery_success_button">Sawa</string>
     <string name="connect_recovery_failure">Hitilafu katika kukamilisha urejeshaji, tafadhali jaribu tena baadaye</string>
-    <string name="connect_unlock_title">Fungua ConnectID</string>
+    <string name="connect_unlock_title">Fungua PersonalId</string>
     <string name="connect_unlock_message">Tafadhali fungua ili kuendelea</string>
     <string name="connect_unlock_button_pin">Fungua kwa PIN</string>
     <string name="connect_unlock_button_password">Fungua kwa Nenosiri</string>
@@ -430,15 +430,15 @@
     <string name="connect_biometric_enroll_fail_button">Nenda kwa Mipangilio</string>
     <string name="connect_register_name">Jina</string>
     <string name="connect_register_success_title">Akaunti Imeundwa</string>
-    <string name="connect_register_success_message">Akaunti yako ya ConnectID imeundwa kwa ufanisi na sasa iko tayari kwako kuitumia!</string>
+    <string name="connect_register_success_message">Akaunti yako ya PersonalId imeundwa kwa ufanisi na sasa iko tayari kwako kuitumia!</string>
     <string name="connect_register_success_button">Sawa</string>
     <string name="connect_verify_title">Fungua Chaguzi</string>
-    <string name="connect_verify_message">Tafadhali sanidi mbinu iliyo hapa chini ili kufungua kifaa chako na akaunti ya ConnectID</string>
+    <string name="connect_verify_message">Tafadhali sanidi mbinu iliyo hapa chini ili kufungua kifaa chako na akaunti ya PersonalId</string>
     <string name="connect_verify_use_fingerprint_long">Tumia Alama ya Kidole Kuunganisha</string>
-    <string name="connect_verify_fingerprint_configured">Alama yako ya kidole tayari imesanidiwa na itatumika kufungua ConnectID.</string>
+    <string name="connect_verify_fingerprint_configured">Alama yako ya kidole tayari imesanidiwa na itatumika kufungua PersonalId.</string>
     <string name="connect_verify_configure_fingerprint">Sanidi Alama ya Kidole</string>
     <string name="connect_verify_use_pin_long">Tumia PIN Kuunganisha</string>
-    <string name="connect_verify_pin_configured">PIN yako tayari imesanidiwa na itatumika kufungua ConnectID.</string>
+    <string name="connect_verify_pin_configured">PIN yako tayari imesanidiwa na itatumika kufungua PersonalId.</string>
     <string name="connect_verify_configuration_failed">Usanidi haukufaulu, tafadhali jaribu tena. %s</string>
     <string name="connect_verify_configure_pin">Sanidi PIN</string>
     <string name="connect_verify_agree">Kubali na Uendelee</string>
@@ -512,15 +512,15 @@
     <string name="connect_payment_confirm_yes">Ndiyo!</string>
     <string name="connect_payment_confirm_no">Uliza baadaye</string>
     <string name="connect_payment_confirm_failed">Imeshindwa kutuma uthibitisho, tutauliza tena baadaye.</string>
-    <string name="login_button_connectid">Ingia kwa ConnectID</string>
-    <string name="login_link_connectid_title">Unganisha kwa ConnectID?</string>
-    <string name="login_link_connectid_message">Je, ungependa kuunganisha kuingia huku kwa akaunti yako ya ConnectID? Hutahitaji kuandika nenosiri lako katika siku zijazo.</string>
-    <string name="login_unlink_connectid_title">Je, ungependa kutenganisha ConnectID?</string>
-    <string name="login_unlink_connectid_message">Naona umeingia na nenosiri lako ingawa ConnectID ilisanidiwa kwa ajili ya kuingia kiotomatiki. Je, ungependa kutenganisha kuingia huku kutoka kwa ConnectID?</string>
+    <string name="login_button_connectid">Ingia kwa PersonalId</string>
+    <string name="login_link_connectid_title">Unganisha kwa PersonalId?</string>
+    <string name="login_link_connectid_message">Je, ungependa kuunganisha kuingia huku kwa akaunti yako ya PersonalId? Hutahitaji kuandika nenosiri lako katika siku zijazo.</string>
+    <string name="login_unlink_connectid_title">Je, ungependa kutenganisha PersonalId?</string>
+    <string name="login_unlink_connectid_message">Naona umeingia na nenosiri lako ingawa PersonalId ilisanidiwa kwa ajili ya kuingia kiotomatiki. Je, ungependa kutenganisha kuingia huku kutoka kwa PersonalId?</string>
     <string name="login_link_connectid_yes">Ndiyo</string>
     <string name="login_link_connectid_no">Hapana</string>
-    <string name="login_menu_connect_sign_in">Jisajili kwa ConnectID</string>
-    <string name="login_menu_connect_forget">Sahau mtumiaji wa ConnectID</string>
+    <string name="login_menu_connect_sign_in">Jisajili kwa PersonalId</string>
+    <string name="login_menu_connect_forget">Sahau mtumiaji wa PersonalId</string>
     <string name="connect_app_install_unknown_error">Usakinishaji wa programu haukufaulu kwa sababu ya hitilafu isiyojulikana</string>
     <string name="connect_app_installed">Programu imesakinishwa</string>
     <string name="app_with_id_not_found">Programu ya CommCare Inayohitajika haijasakinishwa kwenye kifaa</string>
@@ -574,7 +574,7 @@
     <string name="connect_job_tile_daily_limit_description">Kikomo cha Kila siku kimefikiwa. Hakuna Malipo ya kuwasilisha fomu</string>
     <string name="connect_job_tile_daily_limit">Zaidi ya Kikomo</string>
     <string name="connect_recovery_decision_new">Chagua hatua hapa chini</string>
-    <string name="connect_recovery_button_new">Unda Akaunti Mpya ya ConnectID</string>
+    <string name="connect_recovery_button_new">Unda Akaunti Mpya ya PersonalId</string>
     <string name="connect_recovery_button_recover">Rejesha Akaunti Iliyopo</string>
     <string name="connect_recovery_decision_phone">Tafadhali weka nambari msingi ya simu uliyoweka na akaunti yako</string>
     <string name="connect_recovery_button_phone">Endelea</string>
