--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -340,19 +340,19 @@
     <string name="fcm_notification">FCM ሓበሬታ መዘካከሪ</string>
     <string name="fcm_default_notification_channel">ሓበሬታ መዘካከሪ-ቻነል-ደፍእ-ሓበሬታ መዘካከሪታት</string>
     <string name="app_select_message">ሓደ ኣፕሊካሽን ምረፅ</string>
-    <string name="connect_id_enabled">ConnectID ሰሪሑ ኣሎ።</string>
-    <string name="login_password_by_connect">ብመንገዲ ConnectID (ወይ ኣብዚ ጽቐጥ)</string>
+    <string name="connect_id_enabled">PersonalId ሰሪሑ ኣሎ።</string>
+    <string name="login_password_by_connect">ብመንገዲ PersonalId (ወይ ኣብዚ ጽቐጥ)</string>
     <string name="login_welcome_connect_signed_in">እንቋዕ ብደሓን መጻእኩም %s!</string>
-    <string name="login_connect_secondary_phone_message">በጃኹም ካልኣይ ደረጃ ስልክኹም ብ %s ኣረጋግጹ ConnectID ምጥቃምም ክትቅጽል።</string>
+    <string name="login_connect_secondary_phone_message">በጃኹም ካልኣይ ደረጃ ስልክኹም ብ %s ኣረጋግጹ PersonalId ምጥቃምም ክትቅጽል።</string>
     <string name="choice_or">_____________ ወይ _____________</string>
     <string name="busy_message">ሕጂ ውን ቅድሚ ሕጂ ዝገበርካዮ ሕቶ ኣብ ምስራሕ ተጸሚድና ኣለና። በጃኻ ድሕሪ ውሱን ግዜ ደጊምካ ፈትን።</string>
     <string name="connect_button_logged_in">ናብ Connect መማረፂ ኪድ</string>
     <string name="personalid_generic_error">ጸገም ኣጋጢሙ፡ በጃኻ PersonalID ኣካውንትካ እንደገና ኣወሃህቦ።</string>
-    <string name="connect_registration_title">ConnectID ምዝገባ</string>
+    <string name="connect_registration_title">PersonalId ምዝገባ</string>
     <string name="connect_signup">ምዝገባ</string>
     <string name="connect_recover">ናብ ንቡር ኩነታት ምምላስ</string>
-    <string name="connect_registration_have_account">ኣቀዲሙ \nConnectID ኣለካ ድዩ?</string>
-    <string name="connect_recover_no_account">\nConnectID የብልካን ድዩ?</string>
+    <string name="connect_registration_have_account">ኣቀዲሙ \nPersonalId ኣለካ ድዩ?</string>
+    <string name="connect_recover_no_account">\nPersonalId የብልካን ድዩ?</string>
     <string name="connect_consent_message_1">ኣነ ፖሊሲ ውልቃዊ ሓበሬታ፡ ውዕል ኣገልግሎት፡ ስምምዕ ንግዲን ፖሊሲ ቅቡል ኣጠቓቕማን Dimagi\'s/ ዲማጊ ኣንቢበን ተሰማሚዐን ኣለኹ።</string>
     <string name="connect_phone_page_title">ቁፅሪ ሞባይል/ስልኪ።</string>
     <string name="connect_phone_title_primary">ቀዳማይ ደረጃ/ ቀንዲ ሞባይል/ስልኪ።</string>
@@ -378,7 +378,7 @@
     <string name="connect_otp_verification_failed">OTP ምርግጋጽ ብሰንኪ...</string>
     <string name="connect_backup_code_title_set">ናይ ምሕዋይ ሕጊ</string>
     <string name="connect_backup_code_title_confirm">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
-    <string name="connect_backup_code_message_title">ConnectID ናይ ምሕዋይ ኮድ</string>
+    <string name="connect_backup_code_message_title">PersonalId ናይ ምሕዋይ ኮድ</string>
     <string name="connect_backup_code_message">6 ኣሃዝ ዘለዎ ናይ ምሕዋይ ኮድካ ኣእቱ</string>
     <string name="connect_backup_code">ናይ ምሕዋይ ኮድ ኣእትዉ</string>
     <string name="connect_backup_code_repeat">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
@@ -398,16 +398,16 @@
     <string name="connect_backup_code_recovery_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ኣካውንትካ ናብ ንቡር ኩነታት ክትመልስ ከድልየካ እዩ።\n ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትካ ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
     <string name="connect_backup_code_confirm_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ነቲ ኮድ እንደገና ክተስተካክሎ ክትግደድ ኢኻ።\n ኣብ ዝቕጽል ስክሪን፡ ናብቲ ናይ መስተካከሊ ኮድ ገጽ ክንመርሐካ ኢና።</string>
     <string name="connect_backup_code_verify_forgot">ኮድ ረሲዐዮ</string>
-    <string name="connect_recovery_title">ConnectID ናብ ንቡር ምምላስ</string>
+    <string name="connect_recovery_title">PersonalId ናብ ንቡር ምምላስ</string>
     <string name="connect_recovery_alt_title">ኣማራፂ ስልኪ</string>
     <string name="connect_recovery_alt_message">ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትኩም ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
     <string name="connect_recovery_alt_button">ቀፃሊ</string>
     <string name="connect_recovery_alt_change_button">ቁፅሪ ምቕያር</string>
     <string name="connect_recovery_success_title">ኣካውንት ናብ ንቡር ተመሊሱ</string>
-    <string name="connect_recovery_success_message">ኣካውንትካ ብዓወት ረኺብካዮ ኣለኻ፡ ሕጂ ድማ ConnectID ምጥቃም ክትጅምር ትኽእል ኢኻ።</string>
+    <string name="connect_recovery_success_message">ኣካውንትካ ብዓወት ረኺብካዮ ኣለኻ፡ ሕጂ ድማ PersonalId ምጥቃም ክትጅምር ትኽእል ኢኻ።</string>
     <string name="connect_recovery_success_button">እሺ</string>
     <string name="connect_recovery_failure">ጌጋ ኣብ ምዝዛም ምሕዋይ፡ በይዛኹም ፀኒሕኹም ደጊምኩም ፈትኑ</string>
-    <string name="connect_unlock_title">ConnectID ኽፈት።</string>
+    <string name="connect_unlock_title">PersonalId ኽፈት።</string>
     <string name="connect_unlock_message">ንኽትቅጽል በጃኹም ክትከፍቱ ንላቦ</string>
     <string name="connect_unlock_button_pin">ብፒን ኽፈት።</string>
     <string name="connect_unlock_button_password">ብ Password ኽፈት።</string>
@@ -421,15 +421,15 @@
     <string name="connect_biometric_enroll_fail_button">ናብ ቅጥዕታት ኪድ</string>
     <string name="connect_register_name">ሽም</string>
     <string name="connect_register_success_title">ኣካውንት ተፈጢሩ</string>
-    <string name="connect_register_success_message">ናይ ConnectID ኣካውንትካ ብዓወት ተፈጢሩ ኣሎ፡ ኸዚ ድማ ንኽትጥቀመሉ ድሉው ኮይኑ ኣሎ!</string>
+    <string name="connect_register_success_message">ናይ PersonalId ኣካውንትካ ብዓወት ተፈጢሩ ኣሎ፡ ኸዚ ድማ ንኽትጥቀመሉ ድሉው ኮይኑ ኣሎ!</string>
     <string name="connect_register_success_button">እሺ</string>
     <string name="connect_verify_title">ኣማራፂታት ምኽፋት።</string>
-    <string name="connect_verify_message">በይዛኻ ንኽልቲኡ መሳርሒኻን ConnectID ኣካውንትካን ንምኽፋት ኣብ ታሕቲ ዘሎ ሜላ ኣወሃህድ</string>
+    <string name="connect_verify_message">በይዛኻ ንኽልቲኡ መሳርሒኻን PersonalId ኣካውንትካን ንምኽፋት ኣብ ታሕቲ ዘሎ ሜላ ኣወሃህድ</string>
     <string name="connect_verify_use_fingerprint_long">ንምትእስሳር ኣሰር ኣፃብዕቲ ተጠቐም</string>
-    <string name="connect_verify_fingerprint_configured">ኣሰር ኣፃብዕትኻ በቃ ተዋቒሩ ኣሎ፡ ንConnectID ንምኽፋት ድማ ክጥቀመሉ እዩ።</string>
+    <string name="connect_verify_fingerprint_configured">ኣሰር ኣፃብዕትኻ በቃ ተዋቒሩ ኣሎ፡ ንPersonalId ንምኽፋት ድማ ክጥቀመሉ እዩ።</string>
     <string name="connect_verify_configure_fingerprint">ኣሰር ኣፃብዕቲ ምውቃር</string>
     <string name="connect_verify_use_pin_long">ንምትእስሳር ፒን ተጠቐም</string>
-    <string name="connect_verify_pin_configured">ፒንካ በቃ ተዋቒሩ ኣሎ፡ ንConnectID ንምኽፋት ድማ ክጥቀመሉ እዩ።</string>
+    <string name="connect_verify_pin_configured">ፒንካ በቃ ተዋቒሩ ኣሎ፡ ንPersonalId ንምኽፋት ድማ ክጥቀመሉ እዩ።</string>
     <string name="connect_verify_configuration_failed">ውቅር ኣይተዓወተን፣ በጃኻ እንደገና ፈትን።  %s</string>
     <string name="connect_verify_configure_pin">ፒን ምውቃር</string>
     <string name="connect_verify_agree">ስምምዕ &amp; ቀፅል</string>
@@ -511,15 +511,15 @@
     <string name="connect_payment_confirm_yes">እወ!</string>
     <string name="connect_payment_confirm_no">ፀኒሕኻ ሕተት።</string>
     <string name="connect_payment_confirm_failed">መረጋገፂ ምልኣኽ ስለዘይከኣለ፡ ፀኒሕና እንደገና ክንሓትት ኢና።</string>
-    <string name="login_button_connectid">ብ ConnectID እቶ</string>
-    <string name="login_link_connectid_title">ናብ ConnectID ዝወስድ ሊንክ?</string>
+    <string name="login_button_connectid">ብ PersonalId እቶ</string>
+    <string name="login_link_connectid_title">ናብ PersonalId ዝወስድ ሊንክ?</string>
     <string name="login_link_connectid_message">ነዚ መእተዊ ምስ ናይ ምትእስሳር መለለዪ ኣካውንትካ ከተተሓሕዞ ትደሊ ዲኻ? ኣብ መጻኢ ፓስዎርድካ ምጽሓፍ ኣየድልየካን እዩ።</string>
     <string name="login_unlink_connectid_title">Unlink ናይ ምትእስሳር መለለዪ?</string>
-    <string name="login_unlink_connectid_message">ConnectID ንኣውቶ-ሎጊን ተባሂሉ ዝተዋቕረ እኳ እንተነበረ፡ ብፓስዎርድካ ከም ዝኣተኻ ይርእየካ ኣለኹ። ነዚ መእተዊ ካብ ConnectID ክትቆርጾ ትደሊ ዲኻ?</string>
+    <string name="login_unlink_connectid_message">PersonalId ንኣውቶ-ሎጊን ተባሂሉ ዝተዋቕረ እኳ እንተነበረ፡ ብፓስዎርድካ ከም ዝኣተኻ ይርእየካ ኣለኹ። ነዚ መእተዊ ካብ PersonalId ክትቆርጾ ትደሊ ዲኻ?</string>
     <string name="login_link_connectid_yes">እወ</string>
     <string name="login_link_connectid_no">አይኮንን</string>
-    <string name="login_menu_connect_sign_in">ኣብ ConnectID ተመዝገቡ</string>
-    <string name="login_menu_connect_forget">ተጠቃሚ ConnectID ረሲዕካዮ</string>
+    <string name="login_menu_connect_sign_in">ኣብ PersonalId ተመዝገቡ</string>
+    <string name="login_menu_connect_forget">ተጠቃሚ PersonalId ረሲዕካዮ</string>
     <string name="connect_app_install_unknown_error">ናይ ኣፕሊኬሽን ምፅዓን ብሰንኪ ዘይተፈልጠ ጌጋ ኣይተዓወተን</string>
     <string name="connect_app_installed">ኣፕሊኬሽን ተፃዒኑ</string>
     <string name="app_with_id_not_found">ዘድሊ CommCare App ኣብ መሳርሒ ኣይተተኸለን</string>
